--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
     <script type="text/javascript" src="./script.js">
 </script>
-
+<h1>Welcome to the world of Web development</h1>
 </body>
 
 </html>
