--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <h1>Welcome to the world of Web development</h1>
+	<div id="text"></div>
 </body>
 
 </html>
